links updated to ctveloracing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Charlie Taylor Racing</title>
+    <title>CT Velo Racing</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">CT Racing - home</a>
+                <a class="navbar-brand page-scroll" href="#page-top">CT Velo Racing</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#detail">In detail</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#sponsors">Supported by</a>
@@ -74,10 +74,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Charlie Taylor</h1>
-                <h1>UK time trial cyclist</h1>
+                <h1>Charlie Taylor<br>UK time trial cyclist</h1>
                 <hr>
-                <p>Reigning National 100 mile time trial champion.</p>
+                <h2>Reigning National 100 mile time trial champion</h2>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -89,15 +88,14 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About</h2>
                     <hr class="light">
-                    <p class="text-faded">Charlie has been racing since 1999 (?) for The South Pennine Road Club. His strength lies in longer distance events.</p>
-                    <p class="text-faded">Charlie actively races and coaches and is also available for gear testing. More text as required...</p>
-                    <a href="#services" class="btn btn-default btn-xl">The detail</a>
+                    <p class="text-faded">Charlie has been racing since 2000 for The South Pennine Road Club.<br>Charlie loves racing and coaching ... more text required...<br>Charlie's competition highlights include:<br>2014 and 2015 National 100 mile TT champion<br>18th fastest 100 mile TT ever<br>more!</p>
+                    <a href="#detail" class="btn btn-default btn-xl">In detail</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <section id="detail">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -117,19 +115,19 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <h3>In press</h3>
-                        <p class="text-muted">Read the articles featuring Charlie</p>
+                        <p class="text-muted">Read what the press are saying about Charlie.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <h3>Coaching</h3>
-                        <p class="text-muted">Read how Charlie can help you get the best from yourself.</p>
+                        <p class="text-muted">Charlie can help you get the best from yourself, <a href="#contact">get in touch</a> to find out more about being coached.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <h3>South Pennine Road Club</h3>
-                        <p class="text-muted"><a href="http://southpennineroadclub.org.uk"> SPRC</a> was formed in 1952 and are based in Derby, racing around Etwall.</p>
+                        <p class="text-muted">Charlie rides for <a href="http://southpennineroadclub.org.uk" target=_blank>SPRC</a>. The club was formed in 1952 and are based in Derby.</p>
                     </div>
                 </div>
             </div>
@@ -142,9 +140,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Supported by</h2>
                     <hr class="light">
-                    <p class="text-faded">Charlie has developed relationships with a number of brands, these are listed below. He's always interested in trailing new equipment</p>
-                    <p class="text-faded">Charlie actively races and coaches and is also available for gear testing.</p>
-                    <p class="text-faded">More text as required...</p>
+                    <p class="text-faded">Charlie is supported by companies whose . He's always interested in testing new equipment and forging new relationships, <a href="#contact">get in touch</a> if you'd like to find out more. Click on the images below to visit supporting companies.<br>More text as required...</p>
                 </div>
             </div>
         </div>
@@ -159,7 +155,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Tester
+                                    Ambassador
                                 </div>
                                 <div class="project-name">
                                     https://www.truemountain.com
@@ -213,36 +209,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+
             </div>
         </div>
     </section>
@@ -255,15 +222,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Get In Touch</h2>
                     <hr class="primary">
-                    <p>Follow Charlie on Twitter to keep up with his latest news and use the contact details below to get in touch about sponsorship, product testing, coaching, etc..</p>
+                    <p>Follow Charlie on social media to keep up with his latest news and use the contact box below for more detailed requests.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-twitter-square fa-4x wow bounceIn"></i>
-                    <p>@CTRacing or whatever you fancy that's available</p>
+                    <i class="fa fa-twitter-square fa-4x"></i>
+                    <p><a href="https://www.twitter.com/@CTVeloRacing" target=_blank>@CTVeloRacing</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">info@CTRacing.com</a>, if you pay $5 pa to get a forwarding address</p>
+                    <i class="fa fa-facebook-square fa-4x"></i>
+                    <p><a href="https://www.facebook.com/CTVeloRacing" target=_blank>CTVeloRacing on Facebook</a></p>
                 </div>
             </div>
         </div>
