copyright, company place holders

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Racing and coaching (to link to individual pages)</h2>
+                    <h2 class="section-heading">In detail</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -114,8 +114,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <h3>In press</h3>
-                        <p class="text-muted">Read what the press are saying about Charlie.</p>
+                        <h3>In the news</h3>
+                        <p class="text-muted">Read what the press are writing about Charlie.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -170,10 +170,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Sponsor
+                                    Your company
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Here!
                                 </div>
                             </div>
                         </div>
@@ -185,10 +185,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Your company
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Here!
                                 </div>
                             </div>
                         </div>
@@ -200,10 +200,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Your company
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Here!
                                 </div>
                             </div>
                         </div>
@@ -222,7 +222,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Get In Touch</h2>
                     <hr class="primary">
-                    <p>Follow Charlie on social media to keep up with his latest news and use the contact box below for more detailed requests.</p>
+                    <p>Follow Charlie on social media to keep up with his latest news.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-twitter-square fa-4x"></i>
@@ -235,6 +235,16 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <p>Copyright &copy; CTVeloRacing.com 2015</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
