updated photos and added under development caveats

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Charlie Taylor<br>UK time trial cyclist</h1>
+                <h1>Charlie Taylor
+                <br>
+                UK time trial cyclist</h1>
                 <hr>
                 <h2>Reigning National 100 mile time trial champion</h2>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
@@ -88,7 +90,13 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About</h2>
                     <hr class="light">
-                    <p class="text-faded">Charlie has been racing since 2000 for The South Pennine Road Club.<br>Charlie loves racing and coaching ... more text required...<br>Charlie's competition highlights include:<br>2014 and 2015 National 100 mile TT champion<br>18th fastest 100 mile TT ever<br>more!</p>
+                    <p class="text-faded">Charlie has been racing since 2000 for The South Pennine Road Club. Charlie's competition highlights include:
+                    <br>
+                    2014 and 2015 National 100 mile TT champion
+                    <br>
+                    18th fastest 100 mile TT ever
+                    <br>
+                    <b>This section of the website is under development - please check back later for updates.</b></p>
                     <a href="#detail" class="btn btn-default btn-xl">In detail</a>
                 </div>
             </div>
@@ -109,13 +117,13 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <h3>Latest results</h3>
-                        <p class="text-muted">See Charlie's latest competition results.</p>
+                        <p class="text-muted">Coming soon: Charlie's latest competition results.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <h3>In the news</h3>
-                        <p class="text-muted">Read what the press are writing about Charlie.</p>
+                        <p class="text-muted">Comming soon: Read what the press are writing about Charlie.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -140,7 +148,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Supported by</h2>
                     <hr class="light">
-                    <p class="text-faded">Charlie is supported by companies whose . He's always interested in testing new equipment and forging new relationships, <a href="#contact">get in touch</a> if you'd like to find out more. Click on the images below to visit supporting companies.<br>More text as required...</p>
+                    <p class="text-faded"><b>This section of the website is under development - please check back later for updates.</b><br>Charlie is working with supportive companies to help be the fastest he can be. He's always interested in testing new equipment and forging new relationships, <a href="#contact">get in touch</a> if you'd like to find out more. Click on the images below to visit supporting companies.</p>
                 </div>
             </div>
         </div>
@@ -150,7 +158,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://www.truemountain.com" class="portfolio-box">
+                    <a href="https://www.truemountain.com" target=_blank class="portfolio-box">
                         <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
