changed banner photo

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <br>
                 UK time trial cyclist</h1>
                 <hr>
-                <h2>Reigning National 100 mile time trial champion</h2>
+                <!--<h2>Reigning National 100 mile time trial champion</h2> -->
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-twitter-square fa-4x"></i>
-                    <p><a href="https://www.twitter.com/@CTVeloRacing" target=_blank>@CTVeloRacing</a></p>
+                    <p><a href="https://www.twitter.com/CTVeloRacing" target=_blank>@CTVeloRacing</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-facebook-square fa-4x"></i>
