--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
         </div>
     </header>
 
+	<section class="bg-dark" id="news">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Latest news</h2>
+                    <hr class="light">
+                    <p class="text-faded"><b>Charlie's latest news from Twitter.</p>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/CTVeloRacing" data-widget-id="640810156423520257">Tweets by @CTVeloRacing</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
