--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a class="page-scroll" href="#news">News</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
@@ -88,7 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Latest news</h2>
+                    <h2 class="section-heading">News</h2>
                     <hr class="light">
                     <p class="text-faded"><b>Charlie's latest news from Twitter.</p>
                 </div>
