gallery section and tidied text

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#detail">In detail</a>
+                        <a class="page-scroll" href="#sponsors">Supported by</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sponsors">Supported by</a>
+                        <a class="page-scroll" href="#gallery">Gallery</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -81,8 +81,7 @@
                 <br>
                 UK time trial cyclist</h1>
                 <hr>
-                <!--<h2>Reigning National 100 mile time trial champion</h2> -->
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#news" class="btn btn-primary btn-xl page-scroll">Latest news</a>
             </div>
         </div>
     </header>
@@ -94,6 +93,8 @@
                     <h2 class="section-heading">News</h2>
                     <hr class="light">
                     <p class="text-faded"><b>Charlie's latest news from Twitter.</p>
+                    <a href="#about" class="btn btn-primary btn-xl page-scroll">About</a>
+                    <p></p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/CTVeloRacing" data-widget-id="640810156423520257">Tweets by @CTVeloRacing</a>
@@ -103,63 +104,30 @@
         </div>
     </section>
 
-    <section class="bg-primary" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About</h2>
-                    <hr class="light">
-                    <p class="text-faded">Charlie has been racing since 2000 for The South Pennine Road Club. Charlie's competition highlights include:
-                    <br>
-                    2014 and 2015 National 100 mile TT champion
-                    <br>
-                    18th fastest 100 mile TT ever
-                    <br>
-                    <b>This section of the website is under development - please check back later for updates.</b></p>
-                    <a href="#detail" class="btn btn-default btn-xl">In detail</a>
+                    <hr class="primary">
+                    <p class="text-muted">Charlie has been racing since 2000 for the <a href="http://southpennineroadclub.org.uk" target=_blank>South Pennine Road Club</a> and is based in Derby. He's primarily a cyclist, but when he's not on his bike you can find him working as a mechanical engineer, climbing or hill walking. He's a husband and father of two girls, with an insatiable passion for all things outdoors.
+                    </p>
+                    <p class="text-muted">Charlie's competition highlights include:
+                    <ul class="text-muted">
+                        <li>2014 and 2015 National 100 mile TT champion</li>
+                        <li>2nd fastest 100 mile TT ever (3:21:31)</li>
+                        <li>7 Open TT wins in 2015, and counting!</li>
+                    </ul>
+                    </p>
+                    <p class="text-muted">If you would like to be coached by Charlie to reach your potential, <a href="#contact">get in touch</a>.
+                    </p>
+                    <a href="#sponsors" class="btn btn-primary btn-xl page-scroll">Supported by</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="detail">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">In detail</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <h3>Latest results</h3>
-                        <p class="text-muted">Coming soon: Charlie's latest competition results.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <h3>In the news</h3>
-                        <p class="text-muted">Comming soon: Read what the press are writing about Charlie.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <h3>Coaching</h3>
-                        <p class="text-muted">Charlie can help you get the best from yourself, <a href="#contact">get in touch</a> to find out more about being coached.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <h3>South Pennine Road Club</h3>
-                        <p class="text-muted">Charlie rides for <a href="http://southpennineroadclub.org.uk" target=_blank>SPRC</a>. The club was formed in 1952 and are based in Derby.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
 	<section class="bg-dark" id="sponsors">
         <div class="container">
@@ -167,7 +135,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Supported by</h2>
                     <hr class="light">
-                    <p class="text-faded"><b>This section of the website is under development - please check back later for updates.</b><br>Charlie is working with supportive companies to help be the fastest he can be. He's always interested in testing new equipment and forging new relationships, <a href="#contact">get in touch</a> if you'd like to find out more. Click on the images below to visit supporting companies.</p>
+                    <p class="text-faded">Charlie is working with supportive companies to help be the fastest he can be. He's always interested in testing new equipment and forging new relationships, <a href="#contact">get in touch</a> if you'd like to find out more. Click on the images below to visit supporting companies.</p>
                 </div>
             </div>
         </div>
@@ -185,7 +153,7 @@
                                     Ambassador
                                 </div>
                                 <div class="project-name">
-                                    https://www.truemountain.com
+                                    True Mountain
                                 </div>
                             </div>
                         </div>
@@ -241,6 +209,86 @@
         </div>
     </section>
 
+
+	<section class="bg-dark" id="gallery">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Gallery</h2>
+                    <hr class="light">
+                    <p class="text-faded"><b>We're compiling a gallery of Charlie in action. Please click a photo to go to the source.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="no-padding" id="companies">
+        <div class="container-fluid">
+            <div class="row no-gutter">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.cyclingweekly.co.uk/news/latest-news/taylor-takes-monsal-hill-climb-65653" target=_blank class="portfolio-box">
+                        <img src="img/gallery/2009_MonsalHC.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    http://www.cyclingweekly.co.uk/news/latest-news/taylor-takes-monsal-hill-climb-65653
+                                </div>
+                                <div class="project-name">
+                                    2009 Monsal Hill Climb
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.buxtoncyclingclub.co.uk/Images/2014-CharlesTaylor.jpg" target=_blank class="portfolio-box">
+                        <img src="img/gallery/2014_BuxtonHilly.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    http://www.buxtoncyclingclub.co.uk/Images/2014-CharlesTaylor.jpg
+                                </div>
+                                <div class="project-name">
+                                    2014 Buxton Hilly
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.matlockcyclingclub.org.uk/#!charles-taylor.jpg/zoom/c1wji/image_tn3" target=_blank class="portfolio-box">
+                        <img src="img/gallery/2015_MatlockCCHilly.jpeg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    http://www.matlockcyclingclub.org.uk/#!charles-taylor.jpg/zoom/c1wji/image_tn3
+                                </div>
+                                <div class="project-name">
+                                    2015 Matlock CC Hilly
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    
+                                </div>
+                                <div class="project-name">
+                                    If you know where this photo was taken,<br>please tell us!
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </section>
     
 
     <section id="contact">
@@ -266,7 +314,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <p>Copyright &copy; CTVeloRacing.com 2015</p>
                 </div>
             </div>
