2015 achievements and giant sponsor

--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">About</h2>
                     <hr class="primary">
-                    <p class="text-muted">Charlie has been racing since 2000 for the <a href="http://southpennineroadclub.org.uk" target=_blank>South Pennine Road Club</a> and is based in Derby. He's primarily a cyclist, but when he's not on his bike you can find him working as a mechanical engineer, climbing or hill walking. He's a husband and father of two girls, with an insatiable passion for all things outdoors.
+                    <p class="text-muted">Charlie has been racing since 2000 for the <a href="http://southpennineroadclub.org.uk" target=_blank>South Pennine Road Club</a>. He's primarily a cyclist, but when he's not on his bike you can find him working as a mechanical engineer, climbing or hill walking. He's a husband and father of two girls, with an insatiable passion for all things outdoors. Charlie is based in south Derbyshire.
                     </p>
                     <p class="text-muted">Charlie's competition highlights include:
                     <ul class="text-muted">
                         <li>2014 and 2015 National 100 mile TT champion</li>
-                        <li>2nd fastest 100 mile TT ever (3:21:31)</li>
-                        <li>7 Open TT wins in 2015, and counting!</li>
+                        <li>Fastest 100 mile TT ever (3:21:31, 29.78 mph)</li>
+                        <li>8 Open TT wins in 2015</li>
                     </ul>
                     </p>
-                    <p class="text-muted">If you would like to be coached by Charlie to reach your potential, <a href="#contact">get in touch</a>.
+                    <p class="text-muted">If you would like to reach your potential, Charlie can help with coaching: <a href="#contact">get in touch</a>.
                     </p>
                     <a href="#sponsors" class="btn btn-primary btn-xl page-scroll">Supported by</a>
                 </div>
@@ -135,7 +135,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Supported by</h2>
                     <hr class="light">
-                    <p class="text-faded">Charlie is working with supportive companies to help be the fastest he can be. He's always interested in testing new equipment and forging new relationships, <a href="#contact">get in touch</a> if you'd like to find out more. Click on the images below to visit supporting companies.</p>
+                    <p class="text-faded">Charlie is working with supportive companies to help him be the fastest he can be. He's always interested in testing new equipment and forging new relationships, <a href="#contact">get in touch</a> if you'd like to find out more. Click on the images below to visit supporting companies.</p>
                 </div>
             </div>
         </div>
@@ -145,8 +145,23 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.giant-bicycles.com/en-GB" target=_blank class="portfolio-box">
+                        <img src="img/portfolio/Giant_Bicycles.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Frame sponsor
+                                </div>
+                                <div class="project-name">
+                                    Giant Bicycles
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
                     <a href="https://www.truemountain.com" target=_blank class="portfolio-box">
-                        <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/True_Mountain.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -162,21 +177,6 @@
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
                         <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Your company
-                                </div>
-                                <div class="project-name">
-                                    Here!
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
